Closed
Bug 1180379
Opened 11 years ago
Closed 11 years ago
Major graphics artefacts overlaying text input in location bar on Intel GMA
Categories
(Core :: Graphics, defect)
Tracking
()
VERIFIED
FIXED
mozilla42
People
(Reporter: philipp, Assigned: bas.schouten)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
|
1.13 MB,
image/gif
|
Details | |
|
8.82 KB,
patch
|
bas.schouten
:
review+
lmandel
:
approval-mozilla-aurora+
lmandel
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
since updating to firefox 40, there are artifacts overlying the text you put into the location bar (see screencast) on one of my devices with a Mobile Intel 4 Series Express Chipset integrated graphics card with the latest available drivers.
though there were a number of other unresolved cosmetic issues like artefacts around the back button (bug 836701) and search bar, this new bug has a quite serious functional impact.
the regression range is https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=63671ebfa2dd&tochange=3ad4a417e095 and therefore bug 1153609.
the problem doesn't happen in safemode or with hwa disabled...
Application Basics
------------------
Name: Firefox
Version: 40.0
Build ID: 20150702173756
Update Channel: beta
User Agent: Mozilla/5.0 (Windows NT 6.1; rv:40.0) Gecko/20100101 Firefox/40.0
Multiprocess Windows: 0/1 (default: false)
Graphics
--------
Adapter Description: Mobile Intel(R) 4 Series Express Chipset Family
Adapter Drivers: igdumdx32 igd10umd32
Adapter RAM: Unknown
Asynchronous Pan/Zoom: none
Device ID: 0x2a42
Direct2D Enabled: true
DirectWrite Enabled: true (6.2.9200.17292)
Driver Date: 10-4-2012
Driver Version: 8.15.10.2869
GPU #2 Active: false
GPU Accelerated Windows: 1/1 Direct3D 11 (OMTC)
Subsys ID: 30eb103c
Supports Hardware H264 Decoding: true
Vendor ID: 0x8086
WebGL Renderer: Google Inc. -- ANGLE (Mobile Intel(R) 4 Series Express Chipset Family Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote: true
AzureCanvasBackend: direct2d 1.1
AzureContentBackend: direct2d 1.1
AzureFallbackCanvasBackend: cairo
AzureSkiaAccelerated: 0
(#0) Error: OpenSharedResource failed for format 65
| Assignee | ||
Comment 1•11 years ago
|
||
"(#0) Error: OpenSharedResource failed for format 65" <-- this is pretty interesting, I wonder where that is coming from.
| Assignee | ||
Comment 2•11 years ago
|
||
Can any of our Toronto machines reproduce this issue?
Flags: needinfo?(jmuizelaar)
Comment 3•11 years ago
|
||
We have a G45 which should be similar enough to reproduce. I'll check on Monday.
Comment 4•11 years ago
|
||
I can reproduce this issue, or something that looks similar enough in Toronto.
Flags: needinfo?(jmuizelaar)
Comment 5•11 years ago
|
||
I also remember seeing something like this on G41 some time ago. I believe we block D2D on that hardware so it might be worth doing the same on the G45 class.
Updated•11 years ago
|
Summary: Major graphics artefacts overlaying text input in location bar → Major graphics artefacts overlaying text input in location bar on Intel GMA
Comment 6•11 years ago
|
||
(In reply to Jeff Muizelaar [:jrmuizel] from comment #5)
> I also remember seeing something like this on G41 some time ago. I believe
> we block D2D on that hardware so it might be worth doing the same on the G45
> class.
Nevermind, these were artifacts in 39. I see worse artifacts in 40.
Comment 7•11 years ago
|
||
[Tracking Requested - why for this release]: Nasty problem, and seemingly worse than in 39.
Assignee: nobody → jmuizelaar
tracking-firefox40:
--- → ?
Adding a tracking flag for Firefox40.
status-firefox40:
--- → affected
Comment 9•11 years ago
|
||
Disabling Direct2D 1.1, perhaps unsurprising, fixes the problem.
Comment 11•11 years ago
|
||
Considering blocklisting this configuration.
| Assignee | ||
Comment 12•11 years ago
|
||
Comment 13•11 years ago
|
||
Attachment #8632953 -
Attachment is obsolete: true
Attachment #8632953 -
Flags: review?(jmuizelaar)
Attachment #8633052 -
Flags: review?(bas)
| Assignee | ||
Updated•11 years ago
|
Attachment #8633052 -
Flags: review?(bas) → review+
Comment 14•11 years ago
|
||
This bug has an r+ patch. Are you waiting on something else before landing? Note that 40 is marked as affected and we're looking at beta7 at the earliest to take this fix.
Flags: needinfo?(bas)
Comment 15•11 years ago
|
||
(In reply to Lawrence Mandel [:lmandel] (use needinfo) from comment #14)
> This bug has an r+ patch. Are you waiting on something else before landing?
> Note that 40 is marked as affected and we're looking at beta7 at the
> earliest to take this fix.
My calendar shows Bas to be on PTO July 15-21. That *may* be why this hasn't landed yet.
| Assignee | ||
Comment 16•11 years ago
|
||
Jeff wrote this patch, I just r+'ed it, and yes, I am indeed on PTO :-).
Flags: needinfo?(bas) → needinfo?(jmuizelaar)
Comment 17•11 years ago
|
||
Comment 18•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
status-firefox42:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Comment 19•11 years ago
|
||
Philipp, can you please verify this is fixed for you in tomorrow's Firefox Nightly?
Flags: needinfo?(madperson)
| Reporter | ||
Comment 20•11 years ago
|
||
in today's nightly (20150723030207) the bug is now fixed & the graphics adapter got on the blacklist:
Graphics
Adapter Description Mobile Intel(R) 4 Series Express Chipset Family
Adapter Drivers igdumdx32 igd10umd32
Adapter RAM Unknown
Asynchronous Pan/Zoom none
Device ID 0x2a42
Direct2D Enabled Blocked for your graphics card because of unresolved driver issues.
DirectWrite Enabled false (6.2.9200.17292)
Driver Date 10-4-2012
Driver Version 8.15.10.2869
GPU #2 Active false
GPU Accelerated Windows 1/1 Direct3D 11 (OMTC)
Subsys ID 30eb103c
Supports Hardware H264 Decoding true
Vendor ID 0x8086
WebGL Renderer Google Inc. -- ANGLE (Mobile Intel(R) 4 Series Express Chipset Family Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote true
AzureCanvasBackend skia
AzureContentBackend cairo
AzureFallbackCanvasBackend cairo
AzureSkiaAccelerated 0
Status: RESOLVED → VERIFIED
Flags: needinfo?(madperson)
| Reporter | ||
Updated•11 years ago
|
status-firefox41:
--- → affected
Comment 21•11 years ago
|
||
Comment on attachment 8633052 [details] [diff] [review]
Split out GMAX4500 and block those devices from D2D
Approval Request Comment
[Feature/regressing bug #]: bug 1153609
[User impact if declined]: Corruption in url bar
[Describe test coverage new/current, TreeHerder]: Been on central for a bit
[Risks and why]: Just blacklisting D2D, shouldn't be bad
Flags: needinfo?(jmuizelaar)
Attachment #8633052 -
Flags: approval-mozilla-beta?
Attachment #8633052 -
Flags: approval-mozilla-aurora?
Comment 22•11 years ago
|
||
Comment on attachment 8633052 [details] [diff] [review]
Split out GMAX4500 and block those devices from D2D
Verified fix for a visible graphics regression in primary UI. Beta+ Aurora+
Attachment #8633052 -
Flags: approval-mozilla-beta?
Attachment #8633052 -
Flags: approval-mozilla-beta+
Attachment #8633052 -
Flags: approval-mozilla-aurora?
Attachment #8633052 -
Flags: approval-mozilla-aurora+
Comment 23•11 years ago
|
||
(In reply to philipp from comment #20)
> in today's nightly (20150723030207) the bug is now fixed & the graphics
> adapter got on the blacklist
Thanks a lot for your help.
Comment 24•11 years ago
|
||
Comment 25•11 years ago
|
||
| Reporter | ||
Comment 26•11 years ago
|
||
everything is alright in dev edition and beta 7 as well. thanks for getting this addressed before it hits general release!
Updated•11 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•